--- a/style.css
+++ b/style.css
@@ -16,11 +16,13 @@ body{
 	-webkit-border-radius: 100%;
 	border-radius: 100%;
 	animation: pulse 2s infinite;
+	/* -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%); */
 	/* 	box-shadow: 0 10px 17px rgb(0 0 0 / 7%); */
 }
 
 .phone-icon img {
-width: 100%
+width: 100%;
+overflow:hidden;
 }
 .phone-icon:hover {
 	animation: none;
