--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     -webkit-border-radius: 100%;
     border-radius: 100%;
 	  box-shadow: 0 0 0 10px #57c82f30;
+	 -webkit-backface-visibility: hidden;
+ -moz-backface-visibility: hidden;
+ -webkit-transform: translate3d(0, 0, 0);
+ -moz-transform: translate3d(0, 0, 0);
     /* animation: pulse 2s infinite;
     -webkit-animation: pulse 2s infinite; */
 }
