--- a/style.css
+++ b/style.css
@@ -101,4 +101,7 @@ body {
     background-color: pink;
     border-radius: 50%;
     box-shadow: 0 0 0 10px #57c82f30;
+	position: fixed;
+	padding: 5px;
+	display: block;
 }
