--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 .phone_container {
-    /* position: fixed;
+    position: fixed;
     bottom: 20px;
-    left: 80px; */
+    left: 80px;
     /* -webkit-border-radius: 100%; */
     border-radius: 50%;
     /* border: 1px solid red;
