--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@ body {
     padding: 5px;
     -webkit-border-radius: 100%;
     border-radius: 50%;
-    box-shadow: 0 0 0 10px #57c82f30;
+    /* box-shadow: 0 0 0 10px #57c82f30; */
     /* -webkit-appearance: none; */
-    /* animation: pulse 2s infinite;
-    -webkit-animation: pulse 2s infinite; */
+    animation: pulse 2s infinite;
+    /*-webkit-animation: pulse 2s infinite; */
 }
 
-.phone-icon a img, .test img {
+.phone-icon a img {
     width: 100%;
 }
 .phone-icon:hover {
