--- a/style.css
+++ b/style.css
@@ -19,14 +19,12 @@ body {
     width: 91px;
 	height: 91px;
 	margin: 30px;
-    /* transition: all ease 0.4s; */
+    transition: all ease 0.4s;
     z-index: 999;
     background-color: #57c82f7d;
     padding: 5px;
     -webkit-border-radius: 100%;
     border-radius: 100%;
-    /* box-shadow: 0 0 0 10px #57c82f30; */
-    /* -webkit-appearance: none; */
     animation: pulse 2s infinite;
     -webkit-animation: pulse 2s infinite; 
 }
