--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     bottom: 20px;
     left: 80px;
     width: 91px;
-	/* height: 91px; */
+	height: 91px;
 	/* margin: 30px; */
     transition: all ease 0.4s;
     z-index: 999;
